--- a/package.json
+++ b/package.json
@@ -10,17 +10,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "core-js": "^3.13.0",
     "vue": "^2.6.12"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.6",
-    "@vue/cli-plugin-eslint": "~4.5.6",
-    "@vue/cli-service": "~4.5.6",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.9.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "standard": "^14.3.4",
+    "eslint": "^7.27.0",
+    "eslint-plugin-vue": "^7.9.0",
     "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
@@ -29,8 +28,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
-      "standard"
+      "plugin:vue/essential"
     ],
     "parserOptions": {
       "parser": "babel-eslint"
